[package]
name = 'introduction_to_algorithms_3d_edition'
version = "0.1.0"
authors = ["grng3r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="alglib"
path="src/lib.rs"

[dependencies]
rand = "0.7"
rayon = "1.1"
num-traits = "0.2"
